--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ _testmain.go
 
 ## Directory-based project format:
 .idea/
+.vscode/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
