--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+## ripple file
+cmd/ripple/ripple
+.xmark.README.md.html
+
 ### Go template
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
